--- a/package.json
+++ b/package.json
@@ -1,20 +1,29 @@
 {
-  "name": "frontend",
+  "name": "brahmcase-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.10.9",
+    "@mui/lab": "^5.0.0-alpha.108",
+    "@mui/material": "^5.10.12",
+    "@mui/x-data-grid": "^5.17.10",
+    "@mui/x-date-pickers": "^5.0.7",
+    "@reduxjs/toolkit": "^1.9.1",
+    "framer-motion": "^7.10.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-formdata": "^3.0.0",
+    "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.41.0",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.5.0",
+    "react-scripts": "5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
