--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "brahmcase-frontend",
+  "name": "brahmcast-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,7 +7,7 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.9",
     "@mui/lab": "^5.0.0-alpha.108",
-    "@mui/material": "^5.10.12",
+    "@mui/material": "^5.11.7",
     "@mui/x-data-grid": "^5.17.10",
     "@mui/x-date-pickers": "^5.0.7",
     "@reduxjs/toolkit": "^1.9.1",
